test/parse/func/bad-result-multi.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module (func (result i32 i64)
  i32.const 0
  i64.const 0))
(;; STDERR ;;;
out/test/parse/func/bad-result-multi.txt:3:10: error: multiple result values not currently supported.
(module (func (result i32 i64)
         ^^^^
;;; STDERR ;;)
